	  parent program (don't hold a strong reference).
	* Add fallback objects---a single object can be called for any
	  object under a given path prefix.
	* Add support for localization of strings via gettext.
	* Throw a nicer error when signals are not declared as part of an
	  interface.
	* .viewerclasses needs to depend on .binclasses

Version 2.3.2:

	* Fix empty array/map bug (reported by	Jan Kümmel
	  <freedesktop -at- snorc -dot- org>)
	* Add licence headers to files missing them
	* Fix minor bug in AbstractConnection.java (reported by Frank Benoit
	  <benoit -at- tionex -dot- de>
	* Make Marshalling more verbose and descriptive in the presence of
	  mismatched parameter lists (suggested by Anibal Sanchez
	  <anibal -dot- sanchez -at- sunya -dot- com -dot- ar>)
	* Fix struct type parsing error (spotted by Gunnar Aastrand Grimnes
	  <gunnar -dot- grimnes -at- dfki -dot- de> and Frank Benoit 
	  <keinfarbton -at- googlemail -dot- com>)
	* Fix parsing of serializable classes
	* Anonymous SASL (needs testing)

Version 2.3.1:
	
	* Fix regression in normal array handling (spotted by Anibal Sanchez
	  <anibal -dot- sanchez -at- sunya -dot- com -dot- ar>)

Version 2.3:

	* Apply recursive-path patch for DBusViewer (written by Zsombor Gegesy
	  <gzsombor -at- gmail -dot- com>)
	* Add Class-Path to jar manifests
	* Update documentation for nested classes
	* Documentation build fix
	* Add test for arrays-of-structs
	* Fix arrays-of-structs bug (spotted by Daniel Machado
	  <cdanielmachado -at- gmail -dot- com>)
	* Fix bashism in Makefile
	* add DBusInterfaceName annotation to override the Java interface name as
	  the name exported on the bus.

Version 2.2:

	* Fix cross-test to pass.
	* Fix DBusViewer.sh *again* (Spotted by Serkan Kaba <serkan_kaba
			-at- yahoo -dot- com>)
	* Add DBusCall
	* fix CreateInterface to put DBusException in the right package in import
		statements. Spotted by Steve Crane <Steve -dot- Crane -at- rococosoft
		-dot- com>